@@ -43,6 +43,9 @@ jrtps.buffer-size = 16384
 # Defaults to false, since remote participant can determine this data
 jrtps.publish-builtin-data = false
 
+# Configure whether or not to prefer multicast. 
+jrtps.prefer-multicast = true
+
 #jrtps.multicast-address = 239.255.0.1:7400 
 #jrtps.udp-buffer-size = 4096	# Length of UDP buffer
 #jrtps.message-buffer-size = 64  # Max number of messages that are buffered on reception.
